# kiboku

./: Cargo.toml  README.md  RULES.md  example_report.toml
.github/workflows/: publish-report.yml
assets/report/: app.js  index.html
docs/: github_pages_report.toml  github_pages_report_ros2.toml  index.html  issue-40-cmake-parser-plan.md
src/: tests.rs
src/commands/: report.rs
src/models/: cmake.rs
src/parsers/: cmake.rs  package.rs
src/plugins/: loader.rs
tests/: report_warnings.rs  run.rs
