[package]
name = "kiboku"
version = "0.6.0"
edition = "2021"
description = "Static analyzer for ROS workspaces"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mrbearing/kiboku"
authors = ["Takumi Okamoto a.k.a MrBearing <takumi1988okamoto@gmail.com>"]
keywords = ["ros", "ros2", "static-analysis", "migration", "robotics"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "bok"
path = "src/main.rs"

[dependencies]
roxmltree = "0.21.1"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
ros-cmake-parser = "0.1.1"
toml = "0.9.8"
glob = "0.3"
dirs-next = "2.0"
include_dir = "0.7"
tempfile = "3.5"


[dev-dependencies]
